# captions-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.sh
src/: main.rs
