[package]
name = "captions-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "captions"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.51", features = ["derive", "env"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde_json = "1.0.150"
